[gd_scene load_steps=11 format=3 uid="uid://b0b7ca48e8mo8"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/FloorInfo/parts/WingSummary/wing_summary.gd" id="1_4bc0r"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="1_wont5"]
[ext_resource type="FontFile" uid="uid://gev2kme45ctq" path="res://Fonts/Mx437_Portfolio_6x8.ttf" id="3_4yst4"]
[ext_resource type="LabelSettings" uid="uid://cwas73lpm1tqt" path="res://Fonts/game/label_medium.tres" id="3_mp7bc"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="3_sh7hl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3uelh"]
bg_color = Color(0.54, 0.54, 0.54, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nx3w4"]

[sub_resource type="LabelSettings" id="LabelSettings_227lc"]
font = ExtResource("3_4yst4")
font_size = 8
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_qjyc5"]
color = Color(1, 1, 1, 1)
grow_begin = -10.0
grow_end = -10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjuau"]
bg_color = Color(0, 0, 0, 0.560784)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="WingSummary" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_3uelh")
script = ExtResource("1_4bc0r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nx3w4")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="IconBtn" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer" instance=ExtResource("1_wont5")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
icon = 27
static_color = Color(0, 0, 0, 1)
flip_v = false
is_hoverable = false

[node name="TitleLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "WING A"
label_settings = ExtResource("3_mp7bc")
vertical_alignment = 1
uppercase = true
visible_characters_behavior = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "OPERATIONAL"
label_settings = SubResource("LabelSettings_227lc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="StatusHeader" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "ITEM CLASS:"
label_settings = ExtResource("3_sh7hl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_qjyc5")

[node name="DetailsPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jjuau")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/DetailsPanel/MarginContainer2"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/DetailsPanel/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SCP X-01"
label_settings = ExtResource("3_sh7hl")

[node name="Label2" type="Label" parent="VBoxContainer/DetailsPanel/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SCP X-01"
label_settings = ExtResource("3_sh7hl")

[node name="Label3" type="Label" parent="VBoxContainer/DetailsPanel/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SCP X-01"
label_settings = ExtResource("3_sh7hl")
